alignright bug

--- a/sass/02_molecule/_m-content-image.scss
+++ b/sass/02_molecule/_m-content-image.scss
@@ -18,7 +18,7 @@
 	&.alignright {
 		float: right;
 		clear: right;
-		margin: 0.5em 1em 1em 0;
+		margin: 0.5em 0 1em 1em;
 	}
 }
 
